# snake-neat

./: Cargo.toml
src/: apple.rs  enviroment.rs  game.rs  main.rs  snake.rs  telemetry_helper.rs  utils.rs
