[package]
name = "snake-ai"
version = "0.1.0"
authors = ["trickypr"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rustneat]
git = "https://github.com/TLmaK0/rustneat"
default-features = false
features = ["telemetry"]

[dependencies]
# Game engine
piston = "0.52.0"
piston2d-graphics = "0.36.0"
pistoncore-glutin_window = "0.66.0"
piston2d-opengl_graphics = "0.73.0"

# Random number generator for Apple
rand = "0.7.3"

# Assorted utils
num-traits = "0.2"
num-derive = "0.3"


rusty_dashed ="0.2.1"
open = "1.2.1"
clippy = "0.0.302"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
